HelloUltraviolet/Fixtures/RejectedSource/SourceText/ProhibitedControlCharacter/Source/Main.uv
public procedure prohibitedControlCharacterReference() -> i32 {
    return 1
}
